# 42_Python

./: Dockerfile  README.md
Array/ex00/: give_bmi.py
Array/ex01/: array2D.py
Array/ex02/: load_image.py
Array/ex03/: load_image.py  zoom.py
Array/ex04/: load_image.py  rotate.py
Array/ex05/: load_image.py  pimp_image.py  tester.py
DataTable/ex00/: load_csv.py
DataTable/ex01/: aff_life.py  load_csv.py
DataTable/ex02/: aff_pop.py  load_csv.py
DataTable/ex03/: projection_life.py
Dod/ex00/: statistics.py
Dod/ex01/: in_out.py
Dod/ex02/: callLimit.py
Dod/ex03/: new_student.py
OOP/ex00/: S1E9.py
OOP/ex01/: S1E7.py
OOP/ex02/: DiamondTrap.py
OOP/ex03/: ft_calculator.py
OOP/ex04/: ft_calculator.py
Starting/ex00/: Hello.py
Starting/ex01/: format_ft_time.py
Starting/ex02/: find_ft_type.py
Starting/ex03/: NULL_not_found.py
Starting/ex04/: whatis.py
Starting/ex05/: building.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py
Starting/ex09/ft_package/: LICENSE  README.md  count_in_list.py  file.txt  pyproject.toml
Starting/ex09/ft_package/ft_package.egg-info/: PKG-INFO
